
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int exit (int) ;
 int fflush (int ) ;
 int perror (char*) ;
 int printf (char*) ;
 int stdout ;

void re_connt(int sock)
{
 if(sock==-1)
 {
  printf("\n[-] ");
  fflush(stdout);
  perror("connect()");
  printf("[-] exploit failed.\n");
  exit(-1);
 }
}
